# album-management

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 0278f42a3bc1_add_browser_connection_details.py  04a34165339f_on_delete_set_to_null.py  113bdeb89491_initial_migration.py  5dc625cef777_add_album_song_music_service_modify_.py  a2157058840a_add_distributor.py  b6128982a01f_changed_foreign_keys_location_for_user.py  bcd863fc4558_warmup_phase_field_to_date_type.py  eddb2673f0d9_modify_base_models_attributes.py  ef8f0cc535b9_add_email_to_user.py
api/: deps.py
api/api_v1/: api.py
api/api_v1/endpoints/: album.py  auth.py  bc_detail.py  distributor.py  music_service.py  payment_info.py  song.py  user_status.py  users.py
core/: config.py  exception_handler.py  security.py
crud/: __init__.py  base.py  crud_album.py  crud_bc_detail.py  crud_distributor.py  crud_music_service.py  crud_payment_info.py  crud_song.py  crud_user.py  crud_user_status.py
database_app/: base.py  database.py  models.py
schemas/: album.py  auth.py  bc_detail.py  common.py  distributor.py  music_service.py  payment_info.py  song.py  user.py  user_status.py
